charts/templates/create-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: create-service
  namespace: cnas-crud-php
spec:
  replicas: 2
  selector:
    matchLabels:
      app: create-service
  template:
    metadata:
      labels:
        app: create-service
    spec:
      containers:
      - name: create-service
        image: mrdocker123x3/create-service:latest
        ports:
        - containerPort: 80
