charts/templates/delete-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-service
  namespace: cnas-crud-php
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delete-service
  template:
    metadata:
      labels:
        app: delete-service
    spec:
      containers:
      - name: delete-service
        image: mrdocker123x3/delete-service:latest
        ports:
        - containerPort: 80
