charts/templates/query-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service
  namespace: cnas-crud-php
spec:
  replicas: 2
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
      - name: query-service
        image: mrdocker123x3/query-service:latest
        ports:
        - containerPort: 80
