charts/templates/update-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update-service
  namespace: cnas-crud-php
spec:
  replicas: 2
  selector:
    matchLabels:
      app: update-service
  template:
    metadata:
      labels:
        app: update-service
    spec:
      containers:
      - name: update-service
        image: mrdocker123x3/update-service:latest
        ports:
        - containerPort: 80
