charts/templates/create-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: create-service
  namespace: cnas-crud-php
spec:
  selector:
    app: create-service
  ports:
  - port: 80
    targetPort: 80
