charts/templates/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: cnas-crud-php
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
