charts/templates/query-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
  namespace: cnas-crud-php
spec:
  selector:
    app: query-service
  ports:
  - port: 80
    targetPort: 80
