charts/templates/update-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: update-service
  namespace: cnas-crud-php
spec:
  selector:
    app: update-service
  ports:
  - port: 80
    targetPort: 80
