charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnas-ingress
  namespace: cnas-crud-php
  annotations:
    konghq.com/strip-path: "true"

spec:
  ingressClassName: kong
  rules:
  - host: cnas.local
    http:
      paths:
      - path: /create
        pathType: Prefix
        backend:
          service:
            name: create-service
            port:
              number: 80
      - path: /update
        pathType: Prefix
        backend:
          service:
            name: update-service
            port:
              number: 80
      - path: /delete
        pathType: Prefix
        backend:
          service:
            name: delete-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: query-service
            port:
              number: 80
